# mvideo

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  TODO.md  main.py  pyproject.toml
bilibili/: ARCH-STUDIO.md  ARCH.md  TODO.md  package.json
bilibili/src/: Root.tsx
bilibili/src/app/: layout.tsx  page.tsx
bilibili/src/app/api/assets/: route.ts
bilibili/src/app/api/assets/[id]/: route.ts
bilibili/src/app/api/projects/: route.ts
bilibili/src/components/: Button.tsx  Panel.tsx  StudioLayout.tsx  Toolbar.tsx
bilibili/src/components/studio/: ExportPanel.tsx  InspectorPanel.tsx  NewProjectModal.tsx  PreviewPlayer.tsx  ResourcesPanel.tsx  StudioLayout.tsx  StudioToolbar.tsx  TimelinePanel.tsx  index.ts
bilibili/src/components/studio/Timeline/: Clip.tsx  Ruler.tsx  Timeline.tsx  Track.tsx  Waveform.tsx
bilibili/src/hooks/: useKeyboardShortcuts.ts  useResolvedCompositionProps.ts  useStudioKeyboardShortcuts.ts
bilibili/src/remotion/: Root.tsx  composition-registry.ts  preview-config.ts
bilibili/src/remotion/Compositions/: FinalComposition.tsx  IntroComposition.tsx  MainComposition.tsx  OutroComposition.tsx
bilibili/src/server/: asset-store.ts  ffmpeg.ts  ingestion.ts  project-store.ts
bilibili/src/services/: export-store.ts  project-serialization.ts  project-store.ts  resolve-composition-props.ts  ui-store.ts
bilibili/styles/: global.css
bilibili/types/: constants.ts  layout.ts  models.ts
include/: Clip.h  MainWindow.h  MpvVideoWidget.h  Timeline.h
src/: Clip.cpp  MainWindow.cpp  MpvVideoWidget.cpp  Timeline.cpp
(+16 files in other folders)
